<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Well Read</string>

    <string name="title_item_detail">Well Read</string>
    <string name="title_message">Enter Title</string>
    <string name="author_message">Enter Author</string>
    <string name="year_message">Year</string>
    <string name="recommender_message">Enter Recommender</string>
    <string name="obtain">Obtain</string>
    <string name="ToRead">To Read</string>
    <string name="Read">Read</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>