<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cornsilk"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/update_item_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:padding="16dp"
        android:hint="@string/title_message"
        android:inputType="text" />

    <EditText
        android:id="@+id/editAuthor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:padding="16dp"
        android:hint="@string/author_message"
        android:inputType="text" />

    <EditText
        android:id="@+id/editYear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:padding="16dp"
        android:hint="@string/year_message"
        android:inputType="text" />

    <EditText
        android:id="@+id/editRecommender"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:padding="16dp"
        android:hint="@string/recommender_message"
        android:inputType="text" />

    <TextView
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:text="Status:"
        android:textColor="@color/colorPrimaryDark" />

    <RadioGroup
        android:id="@+id/radio_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:paddingRight="16dp"
        android:paddingLeft="16dp">

        <RadioButton
            android:id="@+id/radio_read"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Read"
            android:textColor="@color/colorPrimaryDark" />

        <RadioButton
            android:id="@+id/radio_to_read"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/ToRead"
            android:textColor="@color/colorPrimaryDark" />

        <RadioButton
            android:id="@+id/radio_obtain"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/obtain"
            android:textColor="@color/colorPrimaryDark" />

    </RadioGroup>


    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.3"
        android:background="@color/colorPrimary"
        android:text="Update"
        android:onClick="updateReadingItem"
        android:textColor="@color/cornsilk" />


</LinearLayout>