<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:orientation="vertical"
    android:background="@color/cornsilk">
<TextView
    android:id="@+id/item_text_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:textIsSelectable="true"
    android:textColor="@color/colorPrimaryDark"/>
<RadioGroup
    android:id="@+id/radio_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RadioButton android:id="@+id/radio_obtain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/obtain"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radio_to_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/ToRead"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radio_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/Read"
        android:onClick="onRadioButtonClicked"/>
</RadioGroup>


</LinearLayout>